// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createIamRoleEntity should convert custom role to entity 1`] = `
Object {
  "_class": Array [
    "AccessRole",
  ],
  "_key": "google_cloud_iam_role_projects/j1-gc-integration-dev/roles/myrole",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "description": "Description",
        "etag": "abc123",
        "includedPermissions": Array [
          "cloudfunctions.functions.get",
          "cloudfunctions.functions.getIamPolicy",
        ],
        "name": "projects/j1-gc-integration-dev/roles/myrole",
        "stage": "GA",
        "title": "Role",
      },
    },
  ],
  "_type": "google_cloud_iam_role",
  "createdOn": undefined,
  "custom": true,
  "deleted": false,
  "description": "Description",
  "displayName": "Role",
  "etag": "abc123",
  "name": "projects/j1-gc-integration-dev/roles/myrole",
  "permissions": Array [
    "cloudfunctions.functions.get",
    "cloudfunctions.functions.getIamPolicy",
  ],
  "stage": "GA",
}
`;

exports[`#createIamRoleEntity should convert noncustom role to entity 1`] = `
Object {
  "_class": Array [
    "AccessRole",
  ],
  "_key": "google_cloud_iam_role_projects/j1-gc-integration-dev/roles/myrole",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "description": "Description",
        "etag": "abc123",
        "includedPermissions": Array [
          "cloudfunctions.functions.get",
          "cloudfunctions.functions.getIamPolicy",
        ],
        "name": "projects/j1-gc-integration-dev/roles/myrole",
        "stage": "GA",
        "title": "Role",
      },
    },
  ],
  "_type": "google_cloud_iam_role",
  "createdOn": undefined,
  "custom": false,
  "deleted": false,
  "description": "Description",
  "displayName": "Role",
  "etag": "abc123",
  "name": "projects/j1-gc-integration-dev/roles/myrole",
  "permissions": Array [
    "cloudfunctions.functions.get",
    "cloudfunctions.functions.getIamPolicy",
  ],
  "stage": "GA",
}
`;

exports[`#createIamServiceAccount should convert to entity 1`] = `
Object {
  "_class": Array [
    "User",
  ],
  "_key": "google_cloud_iam_service_account_projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "description": "J1 Google Cloud integration execution",
        "email": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
        "etag": "abc=",
        "name": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
        "oauth2ClientId": "1234567890",
        "projectId": "j1-gc-integration-dev",
        "uniqueId": "1234567890",
      },
    },
  ],
  "_type": "google_cloud_iam_service_account",
  "createdOn": undefined,
  "description": "J1 Google Cloud integration execution",
  "displayName": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "email": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "enabled": true,
  "etag": "abc=",
  "id": "1234567890",
  "name": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "oauth2ClientId": "1234567890",
  "projectId": "j1-gc-integration-dev",
  "username": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
}
`;

exports[`#createIamServiceAccount should convert to entity with "enabled" set to "false" if "disabled" is "true" 1`] = `
Object {
  "_class": Array [
    "User",
  ],
  "_key": "google_cloud_iam_service_account_projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "description": "J1 Google Cloud integration execution",
        "disabled": true,
        "email": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
        "etag": "abc=",
        "name": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
        "oauth2ClientId": "1234567890",
        "projectId": "j1-gc-integration-dev",
        "uniqueId": "1234567890",
      },
    },
  ],
  "_type": "google_cloud_iam_service_account",
  "createdOn": undefined,
  "description": "J1 Google Cloud integration execution",
  "displayName": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "email": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "enabled": false,
  "etag": "abc=",
  "id": "1234567890",
  "name": "projects/j1-gc-integration-dev/serviceAccounts/j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
  "oauth2ClientId": "1234567890",
  "projectId": "j1-gc-integration-dev",
  "username": "j1-gc-integration-dev-sa@j1-gc-integration-dev.iam.gserviceaccount.com",
}
`;
